added an svg class so i can chagne icon colours with ease, and edited root to encorporate new chagnes